versions/23.10.0/docs/MediaFileMini.md
# MediaFileMini


## Properties

Name | Type | Description | Notes
------------ | ------------- | ------------- | -------------
**id** | **int** |  | 
**name** | **str** |  | [readonly] 
**full_path** | **str** |  | [readonly] 
**is_dir** | **bool** |  | [readonly] 
**is_hardlink** | **bool** |  | [readonly] 
**mtime** | **int** |  | [readonly] 
**path** | **str** |  | [readonly] 
**present** | **bool** |  | [readonly] 
**size** | **int** |  | [readonly] 
**volume** | [**VolumeMini**](VolumeMini.md) |  | 
**bundle** | **int, none_type** |  | [optional] [readonly] 
**custom_fields** | **{str: (str, none_type)}** |  | [optional] 
**parent** | **int, none_type** |  | [optional] [readonly] 
**parent_file** | **{str: (str, none_type)}** |  | [optional] [readonly] 

[[Back to Model list]](../#documentation-for-models) [[Back to API list]](../#documentation-for-api-endpoints) [[Back to README]](../)


